--- a/listadmin.html
+++ b/listadmin.html
@@ -34,7 +34,7 @@
                     <img src="assets/img/user01.png" alt="Biblioteca" class="img-responsive center-box"
                         style="width:55%;">
                 </figure>
-                <p class="text-center" style="padding-top: 15px;">nombre empresa</p>
+                <p class="text-center" style="padding-top: 15px;"><span id="nombre_empresa"></p>
             </div>
             <div class="full-reset nav-lateral-list-menu">
                 <ul class="list-unstyled">
@@ -80,7 +80,7 @@
                     <img src="assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box">
                 </figure>
                 <li style="color:#fff; cursor:default;">
-                    <span class="all-tittles">Admin Name</span>
+                    <span class="all-tittles"><span id="nombre_representante"></span></span>
                 </li>
                 <li class="tooltips-general exit-system-button" data-href="index.html" data-placement="bottom"
                     title="Salir del sistema">
@@ -110,108 +110,18 @@
         </div>
         <div class="container-fluid">
             <h2 class="text-center all-tittles">Lista de operadores</h2>
-            <div class="div-table">
-                <div class="div-table-row div-table-head">
-                    <div class="div-table-cell">#</div>
-                    <div class="div-table-cell">Nombre</div>
-                    <div class="div-table-cell">Nombre de usuario</div>
-                    <div class="div-table-cell">Email</div>
-                    <div class="div-table-cell">Estado</div>
-                    <div class="div-table-cell">Cambiar Estado</div>
-                    <div class="div-table-cell">Actualizar</div>
-                    <div class="div-table-cell">Eliminar</div>
-                </div>
-                <div class="div-table-row">
-                    <div class="div-table-cell">#</div>
-                    <div class="div-table-cell">Nombre</div>
-                    <div class="div-table-cell">Nombre de usuario</div>
-                    <div class="div-table-cell">Email</div>
-                    <div class="div-table-cell">Estado</div>
-                    <div class="div-table-cell">
-                        <button type="submit" class="btn btn-info tooltips-general" data-toggle="tooltip"
-                            data-placement="top" title="Cuenta desactivada, pulsa el botón para activarla"><i
-                                class="zmdi zmdi-swap"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-success"><i class="zmdi zmdi-refresh"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-danger"><i class="zmdi zmdi-delete"></i></button>
-                    </div>
-                </div>
-                <div class="div-table-row">
-                    <div class="div-table-cell">#</div>
-                    <div class="div-table-cell">Nombre</div>
-                    <div class="div-table-cell">Nombre de usuario</div>
-                    <div class="div-table-cell">Email</div>
-                    <div class="div-table-cell">Estado</div>
-                    <div class="div-table-cell">
-                        <button type="submit" class="btn btn-info tooltips-general" data-toggle="tooltip"
-                            data-placement="top" title="Cuenta desactivada, pulsa el botón para activarla"><i
-                                class="zmdi zmdi-swap"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-success"><i class="zmdi zmdi-refresh"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-danger"><i class="zmdi zmdi-delete"></i></button>
-                    </div>
-                </div>
-                <div class="div-table-row">
-                    <div class="div-table-cell">#</div>
-                    <div class="div-table-cell">Nombre</div>
-                    <div class="div-table-cell">Nombre de usuario</div>
-                    <div class="div-table-cell">Email</div>
-                    <div class="div-table-cell">Estado</div>
-                    <div class="div-table-cell">
-                        <button type="submit" class="btn btn-info tooltips-general" data-toggle="tooltip"
-                            data-placement="top" title="Cuenta desactivada, pulsa el botón para activarla"><i
-                                class="zmdi zmdi-swap"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-success"><i class="zmdi zmdi-refresh"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-danger"><i class="zmdi zmdi-delete"></i></button>
-                    </div>
-                </div>
-                <div class="div-table-row">
-                    <div class="div-table-cell">#</div>
-                    <div class="div-table-cell">Nombre</div>
-                    <div class="div-table-cell">Nombre de usuario</div>
-                    <div class="div-table-cell">Email</div>
-                    <div class="div-table-cell">Estado</div>
-                    <div class="div-table-cell">
-                        <button type="submit" class="btn btn-info tooltips-general" data-toggle="tooltip"
-                            data-placement="top" title="Cuenta desactivada, pulsa el botón para activarla"><i
-                                class="zmdi zmdi-swap"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-success"><i class="zmdi zmdi-refresh"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-danger"><i class="zmdi zmdi-delete"></i></button>
-                    </div>
-                </div>
-                <div class="div-table-row">
-                    <div class="div-table-cell">#</div>
-                    <div class="div-table-cell">Nombre</div>
-                    <div class="div-table-cell">Nombre de usuario</div>
-                    <div class="div-table-cell">Email</div>
-                    <div class="div-table-cell">Estado</div>
-                    <div class="div-table-cell">
-                        <button type="submit" class="btn btn-info tooltips-general" data-toggle="tooltip"
-                            data-placement="top" title="Cuenta desactivada, pulsa el botón para activarla"><i
-                                class="zmdi zmdi-swap"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-success"><i class="zmdi zmdi-refresh"></i></button>
-                    </div>
-                    <div class="div-table-cell">
-                        <button class="btn btn-danger"><i class="zmdi zmdi-delete"></i></button>
-                    </div>
-                </div>
-            </div>
+            <table style="width:100%" id="ex-table">
+                <thead>
+                    <tr id="tr">
+                        <th>Nombre:</th>
+                        <th>Dirección:</th>
+                        <th>Email:</th>
+                        <th>Estado:</th>
+                    </tr>
+                </thead>
+                <tbody id="tabla">
+                </tbody>
+            </table>
         </div>
         <footer class="footer full-reset">
             <div class="container-fluid">
@@ -234,6 +144,72 @@
             <div class="footer-copyright full-reset all-tittles">© 2020 Gaseoducto</div>
         </footer>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-analytics.js"></script>
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyB4HGvYUZmWH6IF4NTp94I7qqb5k-J_kkQ",
+            authDomain: "gaseoductos-maldonado-ramirez.firebaseapp.com",
+            databaseURL: "https://gaseoductos-maldonado-ramirez.firebaseio.com",
+            projectId: "gaseoductos-maldonado-ramirez",
+            storageBucket: "gaseoductos-maldonado-ramirez.appspot.com",
+            messagingSenderId: "325601344547",
+            appId: "1:325601344547:web:2f570748ca46ec28f68596",
+            measurementId: "G-HXRGKYWB91"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
+    <script>
+        var db = firebase.database();
+        var ref = db.ref("operadores");
+
+        var table = document.getElementById("tabla");
+
+        //limpia la tabla
+        table.innerHTML = "";
+
+        //con esta función recorre todos los datos almacenados en FB ordenados por mi child(tipo)
+
+        ref.orderByChild("empresa").equalTo(localStorage.uid).on("child_added", function (snapshot) {
+            //repite el proceso como cuantas referencias encuentre y los asigna a la lista "d"
+            var d = snapshot.val();
+
+            {
+                var row = table.insertRow(0);
+                var cell1 = row.insertCell(0);
+                var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(2);
+                var cell4 = row.insertCell(3);
+
+                // asigna a las celdas el valir del Child especificado
+                cell1.innerHTML = d.nombre;
+                cell2.innerHTML = d.direccion;
+                cell3.innerHTML = d.email;
+                cell4.innerHTML = d.status;
+            }
+        });
+    </script>
+    <script>
+        nombre_empresa = "";
+        representante = "";
+        db = firebase.database();
+        var empresa = db.ref("empresas/" + localStorage.uid);
+        empresa.on("value", function (snapshot) {
+            nombre_empresa = snapshot.val().Nombre_empresa;
+            representante = snapshot.val().Representante_legal
+            $("#nombre_empresa").html(snapshot.val().Nombre_empresa);
+            $("#nombre_representante").html(snapshot.val().Representante_legal);
+        })
+    </script>
 </body>
 
 </html>
