--- a/listadmin.html
+++ b/listadmin.html
@@ -19,7 +19,6 @@
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/main.js"></script>
 </head>
-
 <body>
     <div class="navbar-lateral full-reset">
         <div class="visible-xs font-movile-menu mobile-menu-button"></div>
@@ -31,8 +30,7 @@
             </div>
             <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
                 <figure>
-                    <img src="assets/img/user01.png" alt="Biblioteca" class="img-responsive center-box"
-                        style="width:55%;">
+                    <div id="profile"></div>
                 </figure>
                 <p class="text-center" style="padding-top: 15px;"><span id="nombre_empresa"></p>
             </div>
@@ -206,6 +204,8 @@
         empresa.on("value", function (snapshot) {
             nombre_empresa = snapshot.val().Nombre_empresa;
             representante = snapshot.val().Representante_legal
+            imagen = snapshot.val().img_perfil;
+            $('#profile').append('<img src="' + imagen + '" class="img-responsive center-box" style="width:55%;">');
             $("#nombre_empresa").html(snapshot.val().Nombre_empresa);
             $("#nombre_representante").html(snapshot.val().Representante_legal);
         })
