--- a/operadores.html
+++ b/operadores.html
@@ -1,22 +1,234 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+<html lang="es">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<head>
+    <title>Cuestionario</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="js/sweet-alert.min.js"></script>
+    <link rel="stylesheet" href="css/sweet-alert.css">
+    <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="js/modernizr.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+<body>
+    <div class="navbar-lateral full-reset">
+        <div class="visible-xs font-movile-menu mobile-menu-button"></div>
+        <div class="full-reset container-menu-movile custom-scroll-containers">
+            <div class="logo full-reset all-tittles">
+                <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button"
+                    style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i>
+                gaseoducto
+            </div>
+            <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
+                <figure>
+                    <div id="profile" ></div>
+                </figure>
+                <p class="text-center" style="padding-top: 15px;"> <span id="nombre_operador"></span></p>
+            </div>
+            <div class="full-reset nav-lateral-list-menu">
+                <ul class="list-unstyled">
+                  <!--panel para mostar opciones, vacio por ser un operador-->
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="content-page-container full-reset custom-scroll-containers">
+        <nav class="navbar-user-top full-reset">
+            <ul class="list-unstyled full-reset">
+                <figure>
+                    <img src="assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box">
+                </figure>
+                <li style="color:#fff; cursor:default;">
+                    <span class="all-tittles"> <span id="nombre_representante"></span></span>
+                </li>
+                <li class="tooltips-general exit-system-button" data-href="index.html" data-placement="bottom"
+                    title="Salir del sistema">
+                    <i class="zmdi zmdi-power"></i>
+                </li>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+                <li class="mobile-menu-button visible-xs" style="float: left !important;">
+                    <i class="zmdi zmdi-menu"></i>
+                </li>
+            </ul>
+        </nav>
+        <div class="container">
+            <div class="page-header">
+                <h1 class="all-tittles">Cuestionario<small>Inicio</small></h1>
+            </div>
+        </div>
+        <section class="full-reset text-center" style="padding: 40px 0;">
+            <!--aqui debe ir el cuestionario-->
+            <div id="contenedor">
+              <div style="background: transparent !important;" class="jumbotron">
+                <h1 class="display-4">Escoja el mejor lenguaje de programacion para usted:</h1>
+                <hr class="my-4">
+                <div class="btn-group btn-group-vertical" data-toggle="buttons">
+                  <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" checked> A. C++
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2"> B. Java
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3"> C. Python
+                  </label>
+                  <label class="btn btn-light">
+                      <input type="radio" name="options" id="option4"> D. Visual Basic
+                    </label>
+              </div>
+              </div>
+              <div style="background: transparent !important;" class="jumbotron">
+                <h1 class="display-4">¿Qué es un vector?</h1>
+                <hr class="my-4">
+                <div class="btn-group btn-group-vertical" data-toggle="buttons">
+                  <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" checked> A. una zona de almacenamiento contiguo que contiene una serie de elementos del mismo tipo
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2"> B. Una regla
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3"> C. Un segmento de recta que parte desde el origen
+                  </label>
+                  <label class="btn btn-light">
+                      <input type="radio" name="options" id="option4"> D. Ninguna de las anteriores
+                    </label>
+              </div>
+              </div>
+              <div style="background: transparent !important;" class="jumbotron">
+                <h1 class="display-4">¿Por qué el cielo es azul?</h1>
+                <hr class="my-4">
+                <div class="btn-group btn-group-vertical"  data-toggle="buttons">
+                  <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" checked> A. No sé
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2"> B. No me importa
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3"> C. Es de todos los colores menos azul
+                  </label>
+                  <label class="btn btn-light">
+                      <input type="radio" name="options" id="option4"> D. Ya valí
+                    </label>
+              </div>
+              </div>
+              <div style="background: transparent !important;" class="jumbotron">
+                <h1 class="display-4">¿Qué es un arbol?</h1>
+                <hr class="my-4">
+                <div class="btn-group btn-group-vertical" data-toggle="buttons">
+                  <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" checked> A. un árbol es un tipo abstracto de datos (TAD) ampliamente usado que imita la estructura jerárquica de un árbol, con un valor en la raíz y subárboles con un nodo padre, representado como un conjunto de nodos enlazados.
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2"> B. algo que sirve
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3"> C. un objeto que da sombra
+                  </label>
+                  <label class="btn btn-light">
+                      <input type="radio" name="options" id="option4"> D. algo para colgar la hamaca
+                  </label>
+                </div>
+              </div>
+              <div style="background: transparent !important;" class="jumbotron">
+                <h1 class="display-4">Califiquenos:</h1>
+                <hr class="my-4">
+                <div class="btn-group btn-group-vertical" data-toggle="buttons">
+                  <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" checked> A. 5
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2"> B. 5
+                  </label>
+                  <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3"> C. 5
+                  </label>
+                  <label class="btn btn-light">
+                      <input type="radio" name="options" id="option4"> D.5
+                  </label>
+              </div>
+              <div style="background: transparent !important;" class="jumbotron">
+                <button type="button" id="enviar">enviar</button>
+              </div>
+              
+            </div>  
+        </section>
+        <footer class="footer full-reset">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                        <h4 class="all-tittles">Acerca de</h4>
+                        <p>
+                            Segundo parcial de frontend Universidad del Norte
+                        </p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <h4 class="all-tittles">Desarrolladores</h4>
+                        <ul class="list-unstyled">
+                            <li><i class="zmdi zmdi-check zmdi-hc-fw"></i>&nbsp; Mauricio Maldonado
+                            <li><i class="zmdi zmdi-check zmdi-hc-fw"></i>&nbsp; Kebin Ramirez
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright full-reset all-tittles">© 2020 Gaseoducto</div>
+        </footer>
+    </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyB4HGvYUZmWH6IF4NTp94I7qqb5k-J_kkQ",
+            authDomain: "gaseoductos-maldonado-ramirez.firebaseapp.com",
+            databaseURL: "https://gaseoductos-maldonado-ramirez.firebaseio.com",
+            projectId: "gaseoductos-maldonado-ramirez",
+            storageBucket: "gaseoductos-maldonado-ramirez.appspot.com",
+            messagingSenderId: "325601344547",
+            appId: "1:325601344547:web:2f570748ca46ec28f68596",
+            measurementId: "G-HXRGKYWB91"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
+    <script>
+      //aqui debe mandarse los valores de las preguntas y respuestas al cuestionario....
+
+    </script>
+    <script>
+      //debe crearse el evento para enviar las respuestas del operador
+      enviar.addEventListener('click', (e) => {
+        e.preventDefault();
+
+
+        //despues de haber guardado todas las respuestas se envia a la pagina de resultados
+        windows.locatio="resultados.html";
+      })
+    </script>
+    <script>
+        nombre_operador = "";
+        db = firebase.database();
+        var operador = db.ref("operadores/" + localStorage.uid);
+        operador.on("value", function (snapshot) {
+            nombre_operador = snapshot.val().nombre;
+            //imagen = snapshot.val().img_perfil;
+            //$('#profile').append('<img src="' + imagen + '" class="img-responsive center-box" style="width:55%;">');
+            $("#nombre_operador").html(snapshot.val().nombre);
+        })
+    </script>
+</body>
 </html>
